--- a/login.html
+++ b/login.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="images/login.css" rel="stylesheet">
+        <link rel="stylesheet" href="./css/login.css">
 </head>
-
+<!-- body section -->
 <body style="background-image: url(images/loginbg.webp);">
     <div class="container" style="border: 2px solid white;">
         <div class="row">
