--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <title>MENU</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="images/menu.css">
+    <link rel="stylesheet" href="./css/menu.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!-- nav bar -->
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-12"></div>
@@ -34,6 +35,9 @@
         </div>
         </nav>
     </div>
+    <!-- nav bar end -->
+
+    <!-- carousel start -->
     <div class="bg-secondary">
         <div class="container1-fluid">
             <h1 class="text-center bg-secondary pt-3 text-warning fs-1"><i>Delicious Cousine</i></h1>
@@ -63,7 +67,9 @@
             </div>
 
         </div>
+        <!-- end carousel  -->
 
+        <!-- body section start  -->
         <div class="container text-center ">
             <p class="fs-1 fst-italic pt-3 bg-dark text-white fw-bold ">For Start </p>
             <p class="fs-2 text-bold bg-dark text-success fw-bold ">STARTERS </p>
@@ -234,10 +240,11 @@
                         sugar,butter,chilled water · </p>
                 </div>
             </div>
-
         </div>
     </div>
-    <div class="container-fluid"style="background-image:url(images/footer-background.webp);">
+
+    <!-- footer section -->
+    <div class="container-fluid" style="background-image:url(images/footer-background.webp);">
         <div class="row">
             <div class="col-12 col-md-12 col-lg-12 text-center ">
                 <h2 class="h2  text-white text-start"><span style="font-family: cursive;">@TASTE_ON_PLATE</span>
@@ -263,6 +270,7 @@
             </div>
         </div>
     </div>
+    <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
         integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
         crossorigin="anonymous"></script>
