--- a/signin.html
+++ b/signin.html
@@ -3,10 +3,10 @@
 
 <head>
     <title>HFD</title>
-    <link href="images/signin.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/signin.css">
 </head>
 
 <body style="background-image: url(images/signupbg.jpg);">
